<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">The Particulate Matter App</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="sensors">%s sensors</string>
    <string name="exit">Quit</string>
    <string name="settings">Settings</string>
    <string name="no_data">No data</string>
    <string name="loading">Loading …</string>
    <string name="loading_data">Loading data …</string>
    <string name="internet_is_not_available">Internet not available</string>
    <string name="enable_wifi">Enable WiFi</string>
    <string name="please_wait_">Please wait …</string>
    <string name="error_try_again">An error occurred. Please try again</string>
    <string name="offline_t">Server offline</string>
    <string name="offline_m">The server is offline. While the server is offline, you cannot access your data.</string>
    <string name="maintenance_t">Server maintenance</string>
    <string name="maintenance_m">The server gets maintained. While the server is offline, you cannot access your data.</string>
    <string name="support_end_t">App support ended</string>
    <string name="support_end_m">We are sorry! The particulate matter app is not supported any more. You can now uninstall the app.</string>
    <string name="update_necessary_t">Update available!</string>
    <string name="update_necessary_m">You have to make an update in order to keep the app working.</string>
    <string name="download_update">Download</string>
    <string name="update_available">Update available</string>
    <string name="download">Download</string>
    <string name="widget_label_large">Display for particulate matter</string>
    <string name="widget_app_data_cleared">The app data was cleared. Please select the sensor again</string>
    <string name="widget_select_sensor">Select sensor</string>
    <string name="widget_no_data">There are no favourites yet. Tap below to add a favourite and select the widget again.</string>
    <string name="tap_again_to_exit_app">Tap again to quit</string>
    <string name="compare_sensors">Compare data</string>
    <string name="edit_sensor">Edit sensor</string>
    <string name="complete_sensor">Complete sensor</string>
    <string name="unlink_sensor">Unlink sensor</string>
    <string name="really_unlink_sensor">Do you really want to unlink the sensor \'%s\'?</string>
    <string name="no_sensors">If you have a sensor from <a href="https://sensor.community/en">www.sensor.community</a>, you can link it here. Tap below to link a sensor.</string>
    <string name="rate_app">Rate app</string>
    <string name="rate_m">If you\'re enjoying our app, please spend a minute and rate the Particulate Matter App with 5 stars on Google Play!</string>
    <string name="recommend_string">The Particulate Matter App: display particulate matter measurements easy and elegant. Download from Google Play: https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.feinstaubapp</string>
    <string name="recommend">Recommend</string>
    <string name="recommend_app">Recommend app</string>
    <string name="recommend_m">Recommend The Particulate Matter App to your friends!</string>
    <string name="rate">Rate</string>
    <string name="add_own_sensor">Add own sensor</string>
    <string name="my_favourites">My favourites</string>
    <string name="all_sensors">All sensors</string>
    <string name="my_sensors">My sensors</string>
    <string name="no_favourites">No favourites yet. Please change to \'All sensors\', choose one or more sensors and select \'Add favourite\'.</string>
    <string name="show_measurements">Show measurements</string>
    <string name="add_favourite">Add favourite</string>
    <string name="favourite_added">Favourite added</string>
    <string name="properties">Properties</string>
    <string name="public_short_">Public:</string>
    <string name="online_since_">Online since:</string>
    <string name="height_short_">Mounting height:</string>
    <string name="compare_instruction">Tap and hold a sensor to select it. Select two or more sensors to compare their measurements.</string>
    <string name="search_for_sensors">Search for sensors</string>
    <string name="sensor_position_completion_m_short">Please complete the sensor data to make the sensor appear on the map.</string>
    <string name="web_version">Web version</string>
    <string name="scan_prompt">Open https://pm.chillibits.com on your computer.</string>
    <string name="successfully_connected">Successfully connected</string>
    <string name="sync_disconnected">Disconnected</string>
    <string name="search_places">Please enter a place …</string>
    <string name="done">Done</string>
    <string name="name_">Display name:</string>
    <string name="chip_id">Chip-ID:</string>
    <string name="choose_color">Choose color</string>
    <string name="not_all_filled">Please fill all fields</string>
    <string name="sensor_existing">Sensor is already linked</string>
    <string name="add_sensor_tick_not_set_message">NOTE: This app only can receive data from the sensor, if you enable \'Send to Feinstaub-App\' in the configuration of your sensor. After you enabled the checkbox, it can last up to 10 minutes until the first data gets sent to our server. Please be patient.</string>
    <string name="add_sensor_tick_not_set_message_required">NOTE: This app only can receive data from the sensor, if you enable \'Send to Feinstaub-App\' in the configuration of your sensor. Enable this to proceed. After you enabled the checkbox, it can last up to 10 minutes until the first data gets sent to our server. Please be patient.</string>
    <string name="do_not_show_again">Don\'t show again</string>
    <string name="public_sensor">Show sensor to other users and make it visible on the map</string>
    <string name="choose_location">Choose exact sensor location</string>
    <string name="sensor_height">Height above ground/street (cm):</string>
    <string name="latitude">Latitude</string>
    <string name="latitude_">Latitude:</string>
    <string name="longitude">Longitude</string>
    <string name="longitude_">Longitude:</string>
    <string name="coordinates_info">The coordinates get rounded due to data protection reasons.</string>
    <string name="gps_will_be_synchronized">If you have a GPS sensor connected to your sensor system, the position will update automatically on the map in realtime.</string>
    <string name="edit_position_info">Due to security reasons, you can only change the sensor position by <a href="mailto:contact@chillibits.com?subject=Change%20sensor%20position">contacting us</a>.</string>
    <string name="unknown_location">Unknown location</string>
    <string name="date">Date</string>
    <string name="tab_diagram">Diagram</string>
    <string name="tab_data">Data records</string>
    <string name="refresh">Refresh</string>
    <string name="no_data_date">No data existing for this date</string>
    <string name="diagram_instruction">Tap on graph to show it in fullscreen</string>
    <string name="date_time">Time</string>
    <string name="temperature_short">Temp</string>
    <string name="temperature">Temperature</string>
    <string name="humidity_short">Humidity</string>
    <string name="pressure_short">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="no_diagram_selected">No diagram selected</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="export_data">Export data</string>
    <string name="pref_header_features">Features</string>
    <string name="enable_daily_average">Show daily average</string>
    <string name="enable_daily_median">Show daily median</string>
    <string name="enable_daily_average_median_s">Displayed below the data records</string>
    <string name="pref_header_sync">Synchronization</string>
    <string name="sync_cycle">Synchronization cycle</string>
    <string name="sync_cycle_t">Synchronization cycle (sec)</string>
    <string name="sync_cycle_background">Synchronization cycle background</string>
    <string name="sync_cycle_background_t">Synchronization cycle background (min)</string>
    <string name="reduce_data_consumption">Reduce data consumption</string>
    <string name="reduce_data_consumption_s">Download only the required data (can cause errors on time shift)</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notification_averages">Notification on exceeded average</string>
    <string name="pref_notification_averages_s_true">Notification, when daily average exceeds the specified value</string>
    <string name="pref_notification_averages_s_false">Notification, when current value exceeds the specified value</string>
    <string name="pref_notification_breakdown">Notification on sensor breakdown</string>
    <string name="pref_notification_breakdown_s">Notification for own sensors when several measurements suspend</string>
    <string name="pref_notification_breakdown_number">Allowed number of missing measurements</string>
    <string name="pref_limit_p1">PM10 limit</string>
    <string name="pref_limit_p1_t">PM10 limit (µg/m³)</string>
    <string name="pref_limit_p2">PM2,5 limit</string>
    <string name="pref_limit_p2_t">PM2,5 limit (µg/m³)</string>
    <string name="pref_limit_temp">Temperature limit</string>
    <string name="pref_limit_temp_t">Temperature limit (°C)</string>
    <string name="pref_limit_humidity">Humidity limit</string>
    <string name="pref_limit_humidity_t">Humidity limit (%)</string>
    <string name="pref_limit_pressure">Pressure limit</string>
    <string name="pref_limit_pressure_t">Pressure limit (hPa)</string>
    <string name="pref_header_performance">Performance</string>
    <string name="pref_increase_diagram_performance">Increase diagram performance</string>
    <string name="pref_increase_diagram_performance_s">Diagram may become inaccurate</string>
    <string name="pref_enable_marker_clustering">Enable marker clustering</string>
    <string name="pref_enable_marker_clustering_s">Sensors on the map will be clustered intelligent</string>
    <string name="clear_sensor_data_t">Clear sensor data</string>
    <string name="clear_sensor_data_m">Clear cached data to save storage</string>
    <string name="pref_header_about">About the Particulate Matter App</string>
    <string name="pref_server_info_t">Server info</string>
    <string name="pref_open_source_t">Open-source licenses</string>
    <string name="pref_open_source_m">License details for open-source-software</string>
    <string name="pref_appversion">App version</string>
    <string name="pref_developers_t">The developers</string>
    <string name="pref_more_apps_t">More apps from us</string>
    <string name="help">Help</string>
    <string name="pref_app_open_source_t">The Particulate Matter App on GitHub</string>
    <string name="pref_app_open_source_s">Click to visit us on GitHub</string>
    <string name="firmware_version_">Firmware version:</string>
    <string name="default_map_type">Default map type</string>
    <string name="enable_traffic_by_default">Enable traffic by default</string>
    <string name="pref_enable_threshold_notifications">Enable threshold notifications</string>
    <string name="local_network">Local network</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="delete_account">Delete account</string>
    <string name="change_personal_data">Change personal data</string>
    <string name="data_protection">Data protection</string>
</resources>