<!--  ~ Copyright © Marc Auberer 2017 - 2020. All rights reserved  --><PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:android="http://schemas.android.com/apk/res/android">    <PreferenceCategory        app:title="@string/pref_header_features"        app:key="feature_settings">        <SwitchPreferenceCompat            app:key="enable_daily_average"            app:defaultValue="true"            app:title="@string/enable_daily_average"            app:summary="@string/enable_daily_average_median_s"/>        <SwitchPreferenceCompat            app:key="enable_daily_median"            app:defaultValue="false"            app:title="@string/enable_daily_median"            app:summary="@string/enable_daily_average_median_s"/>        <SwitchPreferenceCompat            app:key="enable_auto_correction"            app:defaultValue="true"            app:title="@string/enable_auto_correction_t"            app:summary="@string/enable_auto_correction_s"/>    </PreferenceCategory>    <PreferenceCategory        app:title="@string/pref_header_sync"        app:key="sync_settings" >        <EditTextPreference            app:key="sync_cycle"            app:title="@string/sync_cycle"            app:dialogTitle="@string/sync_cycle_t"            app:defaultValue="30"            app:useSimpleSummaryProvider="true"/>        <EditTextPreference            app:key="sync_cycle_background"            app:title="@string/sync_cycle_background"            app:dialogTitle="@string/sync_cycle_background_t"            app:defaultValue="15"            app:useSimpleSummaryProvider="true"/>        <SwitchPreferenceCompat            app:key="reduce_data_consumption"            app:defaultValue="true"            app:title="@string/reduce_data_consumption"            app:summary="@string/reduce_data_consumption_s"/>    </PreferenceCategory>    <PreferenceCategory        app:title="@string/pref_header_appearance"        app:key="appearance_settings">        <ListPreference            app:key="default_map_type"            app:defaultValue="0"            android:title="@string/default_map_type"            android:entries="@array/map_type"            android:entryValues="@array/pref_map_type_values"            app:useSimpleSummaryProvider="true"/>        <SwitchPreferenceCompat            app:key="default_traffic"            android:title="@string/enable_traffic_by_default"            app:defaultValue="false" />    </PreferenceCategory>    <PreferenceCategory        app:title="@string/pref_header_notifications"        app:key="notification_settings" >        <SwitchPreferenceCompat            app:key="notification_threshold"            app:defaultValue="true"            app:title="@string/pref_enable_threshold_notifications"/>        <SwitchPreferenceCompat            app:key="notification_averages"            app:defaultValue="true"            app:title="@string/pref_notification_averages"            app:summaryOn="@string/pref_notification_averages_s_true"            app:summaryOff="@string/pref_notification_averages_s_false"            app:dependency="notification_threshold"/>        <EditTextPreference            app:key="limit_p1"            app:defaultValue="40"            app:title="@string/pref_limit_p1"            app:dialogTitle="@string/pref_limit_p1_t"            app:useSimpleSummaryProvider="true"            app:dependency="notification_threshold"/>        <EditTextPreference            app:key="limit_p2"            app:defaultValue="25"            app:title="@string/pref_limit_p2"            app:dialogTitle="@string/pref_limit_p2_t"            app:useSimpleSummaryProvider="true"            app:dependency="notification_threshold"/>        <EditTextPreference            app:key="limit_temp"            app:defaultValue="0"            app:title="@string/pref_limit_temp"            app:dialogTitle="@string/pref_limit_temp_t"            app:useSimpleSummaryProvider="true"            app:dependency="notification_threshold"/>        <EditTextPreference            app:key="limit_humidity"            app:defaultValue="0"            app:title="@string/pref_limit_humidity"            app:dialogTitle="@string/pref_limit_humidity_t"            app:useSimpleSummaryProvider="true"            app:dependency="notification_threshold"/>        <EditTextPreference            app:key="limit_pressure"            app:defaultValue="0"            app:title="@string/pref_limit_pressure"            app:dialogTitle="@string/pref_limit_pressure_t"            app:useSimpleSummaryProvider="true"            app:dependency="notification_threshold"/>        <SwitchPreferenceCompat            app:key="notification_breakdown"            app:defaultValue="true"            app:title="@string/pref_notification_breakdown"            app:summary="@string/pref_notification_breakdown_s"/>        <EditTextPreference            app:key="notification_breakdown_number"            app:defaultValue="5"            app:title="@string/pref_notification_breakdown_number"            app:dialogTitle="@string/pref_notification_breakdown_number"            app:useSimpleSummaryProvider="true"            app:dependency="notification_breakdown"/>    </PreferenceCategory>    <PreferenceCategory        app:title="@string/pref_header_performance"        app:key="performance_settings" >        <SwitchPreferenceCompat            app:key="enable_marker_clustering"            app:defaultValue="true"            app:title="@string/pref_enable_marker_clustering"            app:summary="@string/pref_enable_marker_clustering_s"/>        <SwitchPreferenceCompat            app:key="increase_diagram_performance"            app:defaultValue="false"            app:title="@string/pref_increase_diagram_performance"            app:summary="@string/pref_increase_diagram_performance_s"/>        <Preference            app:key="clear_sensor_data"            app:title="@string/clear_sensor_data_t"            app:summary="@string/clear_sensor_data_m" />    </PreferenceCategory>    <PreferenceCategory        app:title="@string/pref_header_about"        app:key="about_settings" >        <Preference            app:key="server_info"            app:title="@string/pref_server_info_t"            app:summary="@string/loading"/>        <Preference            app:key="open_source_licenses"            app:title="@string/pref_open_source_t"            app:summary="@string/pref_open_source_m"/>        <Preference            app:key="open_source"            app:title="@string/pref_app_open_source_t"            app:summary="@string/pref_app_open_source_s"/>        <Preference            app:key="app_version"            app:title="@string/pref_appversion"/>        <Preference            app:key="developers"            app:title="@string/pref_developers_t"            app:summary="@string/pref_developers_m"/>        <Preference            app:key="more_apps"            app:title="@string/pref_more_apps_t"            app:summary="@string/pref_more_apps_m"/>    </PreferenceCategory></PreferenceScreen>