<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="22dp"
    android:paddingEnd="15dp"
    android:paddingTop="10dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sensor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/name_"/>

        <TextView
            android:id="@+id/sensor_chip_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/chip_id"/>

        <TextView
            android:id="@+id/sensor_public"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/public_short_"/>

        <TextView
            android:id="@+id/sensor_firmware_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/firmware_version_"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="1"
            android:layout_marginTop="5dp"
            android:text="@string/online_since_"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/latitude_"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/longitude_"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/height_short_"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sensor_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/loading" />

        <TextView
            android:id="@+id/sensor_chip_id_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/loading"/>

        <TextView
            android:id="@+id/sensor_public_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/loading"/>

        <TextView
            android:id="@+id/sensor_firmware_version_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/loading"/>

        <TextView
            android:id="@+id/sensor_creation_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/loading"/>

        <TextView
            android:id="@+id/sensor_lat_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/loading"/>

        <TextView
            android:id="@+id/sensor_lng_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/loading"/>

        <TextView
            android:id="@+id/sensor_alt_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="16sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:text="@string/loading"/>
    </LinearLayout>
</LinearLayout>