<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © Marc Auberer 2017 - 2021. All rights reserved
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profileImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/account_circle"
        android:tint="@color/colorPrimaryTransparent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="@+id/profileImage"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/app_icon"
        android:background="@drawable/simple_circle"
        android:padding="3dp"
        android:backgroundTint="@color/white"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/nameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/profileImage">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_weight="1">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:autofillHints="personGivenName"
                android:inputType="textPersonName"
                android:maxLength="50"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/separator1"
            android:enabled="false"
            android:layout_weight="1">

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:autofillHints="personFamilyName"
                android:inputType="textPersonName"
                android:maxLength="50"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameContainer"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:enabled="false">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:autofillHints="email"
            android:inputType="textEmailAddress"
            android:maxLength="50"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/emailCorrect"
        android:layout_width="23dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputLayoutEmail"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEmail"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="12dp"
        app:srcCompat="@drawable/done_white"
        android:tint="@color/green"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:passwordToggleEnabled="true"
        android:enabled="false">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:maxLength="50"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dataProtection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword"
        android:layout_marginStart="15dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/data_protection" />

    <TextView
        android:id="@+id/deleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword"
        android:layout_marginEnd="15dp"
        android:textColor="@color/red"
        android:text="@string/delete_account" />

    <Button
        android:id="@+id/changePersonalData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dataProtection"
        android:layout_margin="10dp"
        android:background="@drawable/button_outline_rounded"
        android:text="@string/change_personal_data"
        android:textColor="@drawable/button_outline_text" />
</androidx.constraintlayout.widget.ConstraintLayout>